<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cubead.ncs</groupId>
	<artifactId>matrix-service</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<name>matrix-service</name>

	<modules>
		<module>matrix-service-api</module>
		<module>matrix-service-provider</module>
		<module>matrix-service-consumer</module>
	</modules>

	<!-- 资源库 -->
	<repositories>
		<repository>
			<id>thirdparty</id>
			<url>http://192.168.3.185:8180/nexus/content/repositories/thirdparty</url>
		</repository>
		<repository>
			<id>puhuifinance</id>
			<name>Maven of cubead.com</name>
			<url>http://192.168.3.185:8180/nexus/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>default</layout>
		</repository>
		<repository>
			<id>oschina</id>
			<name>Maven of oschina.net</name>
			<url>http://maven.oschina.net/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>default</layout>
		</repository>
	</repositories>

	<!-- pom常量定义 -->
	<properties>
		<!-- Main Lib Version -->
		<spring.version>3.2.3.RELEASE</spring.version>
		<tomcat-jdbc.version>7.0.42</tomcat-jdbc.version>
		<jackson.version>2.2.2</jackson.version>
		<fastjson.version>1.1.34</fastjson.version>
		<slf4j.version>1.7.5</slf4j.version>
		<logback.version>1.0.13</logback.version>
		<jedis.version>2.4.2</jedis.version>
		<druid.version>1.0.4</druid.version>
		<junit.version>4.11</junit.version>
		<commons-lang3.version>3.1</commons-lang3.version>
		<commons-collections.version>3.2.1</commons-collections.version>
		<commons-io.version>2.4</commons-io.version>
		<commons-beanutils.version>1.8.3</commons-beanutils.version>
		<commons-fileupload.version>1.3</commons-fileupload.version>
		<httpclient.version>4.3.6</httpclient.version>
		<httpcore.version>4.4.3</httpcore.version>
		<mail.version>1.5.0-b01</mail.version>
		<joda-time.version>2.3</joda-time.version>
		<poi.version>3.9</poi.version>
		<poi-ooxml.version>3.9</poi-ooxml.version>
		<xmlbeans.version>2.4.0</xmlbeans.version>
		<jsoup.version>1.7.2</jsoup.version>
		<shiro-core.version>1.2.2</shiro-core.version>
		<shiro-spring.version>1.2.2</shiro-spring.version>
		<shiro-ehcache.version>1.2.2</shiro-ehcache.version>
		<jstl.version>1.2</jstl.version>
		<javax.servlet-api.version>3.1.0</javax.servlet-api.version>
		<jsp-api.version>2.2</jsp-api.version>
		<flying-saucer.version>9.0.4</flying-saucer.version>
		<itext.version>4.2.1</itext.version>
		<mysql.version>5.1.21</mysql.version>
		<mybatis.version>3.2.1</mybatis.version>
		<mybatis-spring.version>1.2.0</mybatis-spring.version>
		<mysql-connector-java.version>5.1.26</mysql-connector-java.version>
		<!-- axis2 -->
		<axis2.version>1.6.2</axis2.version>
		<axis2-kernel.version>1.6.2</axis2-kernel.version>
		<axis2-parent.version>1.6.2</axis2-parent.version>
		<axis2-transport-http.version>1.6.2</axis2-transport-http.version>
		<axis2-transport-local.version>1.6.2</axis2-transport-local.version>
		<!-- aspectj -->
		<aspectj.version>1.7.2</aspectj.version>
		<!-- Plugin -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.7</jdk.version>
		<maven.test.skip>true</maven.test.skip>
		<!-- Version <ck.version>1.0-SNAPSHOT</ck.version> -->
		<!-- 确认是否需要 -->
		<hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
		<package.target>resources</package.target>
		<!-- 阿里巴巴 dubbo版本 -->
		<alibaba.dubbo.version>2.4.9</alibaba.dubbo.version>
		<!-- 队列jar包 -->
		<kafka.version>0.8.2.1</kafka.version>
		<!-- 银联证书引用jar包 -->
		<bcprov-version>1.45</bcprov-version>
		<!-- 银联基础jar包 -->
		<upacp-version>1.0.0</upacp-version>
		<!-- activemq -->
		<activemq.version>5.7.0</activemq.version>
		
		<xmemcached.version>1.4.3</xmemcached.version>

		<!-- Common libs -->
		<dubbo_version>2.4.9</dubbo_version>
		<javassist_version>3.15.0-GA</javassist_version>
		<netty_version>3.2.5.Final</netty_version>
		<mina_version>1.1.7</mina_version>
		<grizzly_version>2.1.4</grizzly_version>
		<httpclient_version>4.2.1</httpclient_version>
		<xstream_version>1.4.7</xstream_version>
		<fastjson_version>1.1.34</fastjson_version>
		<bsf_version>3.1</bsf_version>
		<sorcerer_version>0.8</sorcerer_version>
		<zookeeper_version>3.4.6</zookeeper_version>
		<zkclient_version>0.1</zkclient_version>
		<curator_version>1.1.10</curator_version>
		<jedis_version>2.1.0</jedis_version>
		<xmemcached_version>1.3.6</xmemcached_version>
		<cxf_version>2.6.1</cxf_version>
		<thrift_version>0.8.0</thrift_version>
		<jfreechart_version>1.0.13</jfreechart_version>
		<hessian_version>4.0.7</hessian_version>
		<servlet_version>2.5</servlet_version>
		<jetty_version>6.1.26</jetty_version>
		<validation_version>1.0.0.GA</validation_version>
		<hibernate_validator_version>4.2.0.Final</hibernate_validator_version>
		<jcache_version>0.4</jcache_version>
		<sca_version>2.0-M5.1</sca_version>
		<guice_version>3.0</guice_version>
		<cglib_version>2.2</cglib_version>
		<webx_version>3.0.8</webx_version>
		<!-- Log libs -->
		<slf4j_version>1.6.2</slf4j_version>
		<jcl_version>1.1.1</jcl_version>
		<log4j_version>1.2.16</log4j_version>
		<logback_version>1.0.6</logback_version>
		<!-- Test libs -->
		<junit_version>4.11</junit_version>
		<easymock_version>3.2</easymock_version>
		<jmockit_version>0.999.8</jmockit_version>
		<!-- Build args -->
		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
		<skip_maven_deploy>false</skip_maven_deploy>
		<updateReleaseInfo>true</updateReleaseInfo>
	</properties>

	<profiles>
		<profile>
			<id>test</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<ck.version>1.0-SNAPSHOT</ck.version>
			</properties>
		</profile>
		<profile>
			<id>prd</id>
			<properties>
				<ck.version>1.0</ck.version>
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<encoding>utf-8</encoding>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>${skip_maven_deploy}</skip>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<versionRange>[2.0,)</versionRange>
										<goals>
											<goal>copy-dependencies</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>